--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my first ever website</h1>
-    <h3>Look mama!I can push to github</h3>
+    <p>i am ghost</p>
+    <p>Feeling happy now</p>
+    
 </body>
 </html>
