--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>my first ever website</h1>
     <p>i am ghost</p>
     <p>Feeling happy now</p>
     
