--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>i am ghost</p>
     <p>Feeling happy now</p>
     <button>Click me baby</button>
+   <p>i am a lal jinn</p>
 </body>
 </html>
