--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>my first ever website</h1>
     <p>i am ghost</p>
     <p>Feeling happy now</p>
-    
+    <input type="text">
 </body>
 </html>
