--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Feeling happy now</p>
     <button>Click me baby</button>
    <p>i am a lal jinn</p>
+    <input type="text">
+
 </body>
 </html>
