--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>Feeling happy now</p>
     <button>Click me baby</button>
    <p>i am a lal jinn</p>
-    
+    <p>hi iam wasi</p>
 </body>
 </html>
